secondfile/objects/DHStatus_Ethernet_Access_Circuit_Data__c.object
<CustomObject>
    <fields>
        <fullName>ATT_Gateway_Circuit_ID__c</fullName>
        <label>ATT Gateway Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_PI_ID__c</fullName>
        <label>AVPN PI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Method__c</fullName>
        <label>Access Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <label>Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type_Acion__c</fullName>
        <label>Change Type Acion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Access_Circuit_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Access Circuit Data</label>
        <referenceTo>DHStatus_Access_Circuit_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Ethernet Access Circuit Datas</relationshipLabel>
        <relationshipName>DHStatus_Ethernet_Access_Circuit_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_Gateway_Circuit_ID__c</fullName>
        <label>EC Gateway Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICore_Site_ID__c</fullName>
        <label>ICore Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter_Connect_Technology__c</fullName>
        <label>Inter Connect Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPP_Billing_Identifier__c</fullName>
        <label>LPP Billing Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Stamp__c</fullName>
        <label>Last Modified Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_ID__c</fullName>
        <label>Port ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Network__c</fullName>
        <label>Supporting Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aibPIID__c</fullName>
        <label>aibPIID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Ethernet Access Circuit Data</label>
    <nameField>
        <displayFormat>DHEthernetAccessCD-{000000}</displayFormat>
        <label>DHStatus-Ethernet Access Circuit Data Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Ethernet Access Circuit Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>